# CHIP-8-emulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/: chip8.h  instructions.h  window.h
include/core/: chip8.h  instructions.h
include/frontend/: gui.h  renderer.h  window.h
include/sys/: config.h  system.h  tools.h
src/: chip8.c  instructions.c  main.c  window.c
src/core/: chip8.c  instructions.c
src/frontend/: gui.c  renderer.c  window.c
src/sys/: config.c  system.c
